@@ -19,6 +19,7 @@
   [#10078] strsep() should not be pure
   [#10420] sscanf(), If there is a decimal number followed by the
            character '_' in the buffer, you can't get the the number.
+  [#10423] atof is not declared in stdlib.h
 
 * Other changes:
 
