@@ -1,5 +1,9 @@
 2004-09-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* include/stdlib.h: enable and document atof().
+
+2004-09-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* libc/stdio/vfscanf.c: Fix a logical flaw that caused
 	characters > 'Z' && < 'a' to be misdetected as valid
 	hex digits.  Fix for bug #10420.
